# src/main/resources/users-api-contract.yml
@@ -258,6 +258,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorMessage'
+
+  /vehicles/{id}:
+    get:
+      tags:
+        - vehicle
+      summary: Find vehicles by id
+      description: returns vehicles by id
+      operationId: getVehiclesById
+      parameters:
+        - name: id
+          in: path
+          description: vehicle id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Vehicle'
+
+
 components:
   schemas:
     User:
